[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/tilesets/city_tileset.tres" type="TileSet" id=1]
[ext_resource path="res://content/areas/LeaveHomeTriggerArea.tscn" type="PackedScene" id=2]
[ext_resource path="res://content/areas/City/CityPolicestreetArea/CityPoliceStreetArea.gd" type="Script" id=3]
[ext_resource path="res://content/areas/AreaChangeTrigger.gd" type="Script" id=4]
[ext_resource path="res://assets/tilesets/collision_tileset.tres" type="TileSet" id=5]

[node name="CityPolicestreetArea" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( -65530, 1, 0, -65529, 1, 1, -65528, 1, 1, -65527, 1, 1, -65526, 1, 1, -65525, 1, 1, -65524, 1, 2, 65535, 1, 0, 0, 1, 1, 1, 1, 1, 2, 1, 2, 3, 25, 131074, 4, 25, 131075, 5, 25, 131076, 6, 1, 65536, 7, 1, 65537, 8, 1, 65537, 9, 1, 65537, 10, 1, 65537, 11, 1, 65537, 12, 1, 65538, 131071, 1, 65536, 65536, 1, 65537, 65537, 1, 65537, 65538, 1, 65538, 65539, 25, 131074, 65540, 25, 131081, 65541, 25, 131076, 65542, 1, 65536, 65543, 1, 65537, 65544, 1, 65537, 65545, 1, 65537, 65546, 1, 65537, 65547, 1, 65537, 65548, 1, 65538, 196607, 1, 65536, 131072, 1, 65537, 131073, 1, 65537, 131074, 1, 65538, 131075, 25, 131074, 131076, 25, 131075, 131077, 25, 131076, 131078, 1, 65536, 131079, 1, 65537, 131080, 1, 65537, 131081, 1, 65537, 131082, 1, 65537, 131083, 1, 65537, 131084, 1, 65538, 262143, 1, 65536, 196608, 1, 65537, 196609, 1, 65537, 196610, 1, 65538, 196611, 25, 131074, 196612, 25, 65545, 196613, 25, 131076, 196614, 1, 65536, 196615, 1, 65537, 196616, 1, 65537, 196617, 1, 65537, 196618, 1, 65537, 196619, 1, 65537, 196620, 1, 65538, 327679, 1, 65536, 262144, 1, 65537, 262145, 1, 65537, 262146, 1, 65538, 262147, 25, 131074, 262148, 25, 131075, 262149, 25, 131076, 262150, 1, 65536, 262151, 1, 65537, 262152, 1, 65537, 262153, 1, 65537, 262154, 1, 65537, 262155, 1, 65537, 262156, 1, 65538, 393215, 1, 131072, 327680, 1, 131073, 327681, 1, 131073, 327682, 1, 131074, 327683, 25, 131074, 327684, 25, 131081, 327685, 25, 131076, 327686, 1, 65536, 327687, 1, 65537, 327688, 1, 65537, 327689, 1, 65537, 327690, 1, 65537, 327691, 1, 65537, 327692, 1, 65538, 393216, 43, 65545, 393217, 43, 65545, 393218, 43, 3, 393219, 25, 131074, 393220, 25, 131075, 393221, 25, 131076, 393222, 1, 65536, 393223, 1, 65537, 393224, 1, 65537, 393225, 1, 65537, 393226, 1, 65537, 393227, 1, 65537, 393228, 1, 65538, 524287, 1, 0, 458752, 1, 1, 458753, 1, 1, 458754, 1, 2, 458755, 25, 131074, 458756, 25, 65545, 458757, 25, 131076, 458758, 1, 65536, 458759, 1, 65537, 458760, 1, 65537, 458761, 1, 65537, 458762, 1, 65537, 458763, 1, 65537, 458764, 1, 65538, 589823, 1, 65536, 524288, 1, 65537, 524289, 1, 65537, 524290, 1, 65538, 524291, 25, 131074, 524292, 25, 131075, 524293, 25, 131076, 524294, 1, 65536, 524295, 1, 65537, 524296, 1, 65537, 524297, 1, 65537, 524298, 1, 65537, 524299, 1, 65537, 524300, 1, 65538, 655359, 1, 65536, 589824, 1, 65537, 589825, 1, 65537, 589826, 1, 65538, 589827, 25, 131074, 589828, 25, 131081, 589829, 25, 131076, 589830, 1, 65536, 589831, 1, 65537, 589832, 1, 65537, 589833, 1, 65537, 589834, 1, 65537, 589835, 1, 65537, 589836, 1, 65538, 720895, 1, 65536, 655360, 1, 65537, 655361, 1, 65537, 655362, 1, 65538, 655363, 25, 131074, 655364, 25, 131075, 655365, 25, 131076, 655366, 1, 65536, 655367, 1, 65537, 655368, 1, 65537, 655369, 1, 65537, 655370, 1, 65537, 655371, 1, 65537, 655372, 1, 65538, 786431, 1, 65536, 720896, 1, 65537, 720897, 1, 65537, 720898, 1, 65538, 720899, 25, 131074, 720900, 25, 65545, 720901, 25, 131076, 720902, 1, 65536, 720903, 1, 65537, 720904, 1, 65537, 720905, 1, 65537, 720906, 1, 65537, 720907, 1, 65537, 720908, 1, 65538, 851967, 1, 131072, 786432, 1, 131073, 786433, 1, 131073, 786434, 1, 131074, 786435, 25, 131074, 786436, 25, 131075, 786437, 25, 131076, 786438, 1, 65536, 786439, 1, 65537, 786440, 1, 65537, 786441, 1, 65537, 786442, 1, 65537, 786443, 1, 65537, 786444, 1, 65538, 851968, 43, 3, 851969, 43, 65545, 851970, 43, 3, 851971, 25, 131074, 851972, 25, 65545, 851973, 25, 131076, 851974, 1, 65536, 851975, 1, 65537, 851976, 1, 65537, 851977, 1, 65537, 851978, 1, 65537, 851979, 1, 65537, 851980, 1, 65538, 983039, 1, 0, 917504, 1, 1, 917505, 1, 1, 917506, 1, 2, 917507, 25, 131074, 917508, 25, 131075, 917509, 25, 131076, 917510, 1, 65536, 917511, 1, 65537, 917512, 1, 65537, 917513, 1, 65537, 917514, 1, 65537, 917515, 1, 65537, 917516, 1, 65538, 1048575, 1, 65536, 983040, 1, 65537, 983041, 1, 65537, 983042, 1, 65538, 983043, 25, 131074, 983044, 25, 65545, 983045, 25, 131076, 983046, 1, 65536, 983047, 1, 65537, 983048, 1, 65537, 983049, 1, 65537, 983050, 1, 65537, 983051, 1, 65537, 983052, 1, 65538, 1114111, 1, 131072, 1048576, 1, 131073, 1048577, 1, 131073, 1048578, 1, 131074, 1048582, 1, 131072, 1048583, 1, 131073, 1048584, 1, 131073, 1048585, 1, 131073, 1048586, 1, 131073, 1048587, 1, 131073, 1048588, 1, 131074 )

[node name="Houses" type="TileMap" parent="."]
z_index = 1
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 131080, 38, 1, 131081, 38, 2, 131082, 38, 2, 131083, 38, 2, 196616, 38, 65537, 196617, 38, 65538, 196618, 38, 65538, 196619, 38, 65538, 262152, 38, 65537, 262153, 38, 65538, 262154, 38, 65538, 262155, 38, 65538, 327688, 46, 0, 327689, 46, 1, 327690, 46, 1, 327691, 46, 1, 393224, 46, 65536, 393225, 46, 65537, 393226, 46, 65537, 393227, 46, 65537, 458760, 46, 131072, 458761, 46, 131073, 458762, 46, 131073, 458763, 46, 131073, 524296, 46, 131072, 524297, 46, 131073, 524298, 46, 131073, 524299, 46, 131073, 589832, 46, 65539, 589833, 46, 131075, 589834, 46, 131076, 589835, 46, 131077, 655368, 46, 196608, 655369, 46, 196613, 655370, 46, 196609, 655371, 46, 196613 )

[node name="Details" type="TileMap" parent="."]
z_index = 1
tile_set = ExtResource( 1 )
show_collision = true
format = 1

[node name="Collsion" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
show_collision = true
format = 1
tile_data = PoolIntArray( 12, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, 524300, 0, 0, 589836, 0, 0, 655372, 0, 0, 720908, 0, 0, 786444, 0, 0, 851980, 0, 0, 917516, 0, 0, 983052, 0, 0 )

[node name="LeaveBottomTriggerArea" parent="." instance=ExtResource( 2 )]
position = Vector2( 384.697, 1056.56 )
scale = Vector2( 12, 1 )
is_activated_by_collision = true
walkable = true
collisionTriggerPath = NodePath("../LeaveBottomTrigger")

[node name="LeaveBottomTrigger" type="Node" parent="."]
script = ExtResource( 4 )

[node name="LeaveLeftTriggerArea" parent="." instance=ExtResource( 2 )]
position = Vector2( -30.4464, 514.5 )
scale = Vector2( 1, 16 )
is_activated_by_collision = true
walkable = true
collisionTriggerPath = NodePath("../LeaveLeftTrigger")

[node name="LeaveLeftTrigger" type="Node" parent="."]
script = ExtResource( 4 )

[node name="LeaveTopTriggerArea" parent="." instance=ExtResource( 2 )]
position = Vector2( 384.494, -30.9504 )
scale = Vector2( 12, 1 )
is_activated_by_collision = true
walkable = true
collisionTriggerPath = NodePath("../LeaveTopTrigger")

[node name="LeaveTopTrigger" type="Node" parent="."]
script = ExtResource( 4 )
